--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GGMessaging",
+  "name": "app.js",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -9,10 +9,23 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.1",
+    "express": "^4.13.4",
     "jade": "~1.11.0",
     "mongoose": "^4.4.8",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
-  }
+  },
+  "description": "A node service (on top of Express) for messaging functionality across the GG project.\r Uses MongoDB for data persistence",
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/teamagam/GGMessaging.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/teamagam/GGMessaging/issues"
+  },
+  "homepage": "https://github.com/teamagam/GGMessaging#readme"
 }
