Added Support for mongo connection string from Heroku's environment
Merge branch 'develop' of https://github.com/teamagam/GGMessaging into develop

# Conflicts:
#	package.json

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,9 @@
 {
-  "limitResults"  : true,
-  "limitKResults" : 3,
-  "port"          : "3000",
+  "shouldLimitResults": true,
+  "limitKResults": 3,
+  "port": "3000",
   "mongodb": {
     "host": "localhost",
     "port": 27017
   }
-
 }
