--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "events": "^1.1.0",
+    "express": "~4.13.1",
     "express": "^4.13.4",
     "mongoose": "^4.4.8",
     "morgan": "~1.6.1",
