images.js added to route upload images.
the image is uploaded to storage and a message with it's URL is saved in our messagesDB..

the http post should contain two fields:
1. key: image, value: file
2. key: message, value: JSON string representing image message

returns message image with url to the stored file.

--- a/config/config.json
+++ b/config/config.json
@@ -6,5 +6,9 @@
     "host": "localhost",
     "port": 27017
   },
+  "storage": {
+    "host_name": "cv2-pc",
+    "port": 3001
+  },
   "default_long_polling_timeout_ms": 60000
 }
